# Library-Lamp

./: .gitignore  BOM.md  CMakeLists.txt  README.md  agent.md  main.c  partitions.csv  sdkconfig  todo.md  wiring_diagram.yml
hardware/: enclosure.scad
main/: CMakeLists.txt  dns_server.c  dns_server.h  main.c
main/web_assets/: index.html  script.js  setup.html  style.css
sqlite3/: CMakeLists.txt
